--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -14,6 +14,15 @@
         .nav-tabs { margin-bottom: 30px; }
         .nav-tabs .nav-item:first-child { min-width: 150px; }
         .select2-container { width: 100% !important; }
+        .tab-icon { 
+            display: inline-block;
+            margin-right: 8px;
+        }
+        @media (max-width: 768px) {
+            .tab-text { display: none; }
+            .tab-icon { margin: 0; }
+            .nav-tabs .nav-item:first-child { min-width: auto; }
+        }
     </style>
 </head>
 <body>
@@ -21,13 +30,22 @@
         <nav>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/<%= adminPath %>">Generate Rating Link</a>
+                    <a class="nav-link active" href="/<%= adminPath %>">
+                        <i class="fas fa-link tab-icon"></i>
+                        <span class="tab-text">Generate Rating Link</span>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/<%= adminPath %>/dashboard">Ratings Dashboard</a>
+                    <a class="nav-link" href="/<%= adminPath %>/dashboard">
+                        <i class="fas fa-chart-bar tab-icon"></i>
+                        <span class="tab-text">Ratings Dashboard</span>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/<%= adminPath %>/config">Configuration</a>
+                    <a class="nav-link" href="/<%= adminPath %>/config">
+                        <i class="fas fa-cog tab-icon"></i>
+                        <span class="tab-text">Configuration</span>
+                    </a>
                 </li>
             </ul>
         </nav>
