--- a/views/config.ejs
+++ b/views/config.ejs
@@ -9,6 +9,14 @@
     <style>
         .container-fluid { margin-top: 30px; padding: 0 30px; }
         .nav-tabs { margin-bottom: 20px; }
+        .tab-icon { 
+            display: inline-block;
+            margin-right: 8px;
+        }
+        @media (max-width: 768px) {
+            .tab-text { display: none; }
+            .tab-icon { margin: 0; }
+        }
         .config-section { margin-bottom: 30px; }
         .config-item {
             display: flex;
@@ -26,13 +34,22 @@
         <nav>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link" href="/<%= adminPath %>">Generate Rating Link</a>
+                    <a class="nav-link" href="/<%= adminPath %>">
+                        <i class="fas fa-link tab-icon"></i>
+                        <span class="tab-text">Generate Rating Link</span>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/<%= adminPath %>/dashboard">Ratings Dashboard</a>
+                    <a class="nav-link" href="/<%= adminPath %>/dashboard">
+                        <i class="fas fa-chart-bar tab-icon"></i>
+                        <span class="tab-text">Ratings Dashboard</span>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/<%= adminPath %>/config">Configuration</a>
+                    <a class="nav-link active" href="/<%= adminPath %>/config">
+                        <i class="fas fa-cog tab-icon"></i>
+                        <span class="tab-text">Configuration</span>
+                    </a>
                 </li>
             </ul>
         </nav>
